Mobile wikitable overflow fix

--- a/resources/components/wikitable.less
+++ b/resources/components/wikitable.less
@@ -33,3 +33,9 @@ table.wikitable {
     }
   }
 }
+
+@media only screen and (max-width: @screen2) {
+  table.wikitable {
+    white-space: nowrap;
+  }
+}
